# qserializer

./: .cmake-format  CMakeLists.txt  README.md
.github/workflows/: cpp-build-and-test.yaml
example/: CMakeLists.txt  base.cpp  book.hpp  main.cpp  page.hpp
example/book/: CMakeLists.txt  base.cpp  book.cpp  page.cpp
example/book/include/: Base  base.h  book.h  page.h
examples/dbus/: CMakeLists.txt  client.cpp  response.cpp  response.h  server.cpp  server.h
examples/dbus_message/: CMakeLists.txt
examples/dbus_message/apps/client/src/: CMakeLists.txt
examples/dbus_message/apps/server/src/: CMakeLists.txt
examples/dbus_message/include/qserializer/examples/dbus_message/: Response.h
examples/dbus_message/src/: CMakeLists.txt  Response.cpp  Server.cpp  Server.h
examples/dbus_message/src/dbusgen/: CMakeLists.txt
examples/dbus_message/src/qserializer/examples/dbus_message/: Response.cpp
examples/simple/: CMakeLists.txt  main.cpp
examples/simple/book/: CMakeLists.txt
examples/simple/book/include/: Book  Page  book.h  page.h
include/: QSerializer  qserializer.h
include/QSerializer/: QSerializer.h  QSerializerDBus.h
include/qserializer/: qserializer.h  qserializer_dbus.h
libs/core/include/qserializer/: core.h
libs/core/include/qserializer/detail/: QSerializer.h
libs/core/src/: CMakeLists.txt
libs/core/src/qserializer/: Core.cpp
libs/core/src/qserializer/detail/: QSerializer.cpp
libs/dbus/: CMakeLists.txt
libs/dbus/include/qserializer/: dbus.h
libs/dbus/include/qserializer/detail/dbus/: operators.h
libs/dbus/src/: CMakeLists.txt
libs/dbus/src/qserializer/: dbus.cpp
libs/dbus/src/qserializer/detail/dbus/: operators.cpp
misc/cmake/: GetSemverFromGit.cmake  QSerializerConfig.cmake.in
src/QSerializer/: QSerializer.cpp  QSerializerDBus.cpp
tests/: CMakeLists.txt  base.cpp  base.hpp  book.cpp  book.h  book.hpp  custom_converter.cpp  page.cpp  page.h  page.hpp  print_helper.hpp  tests.cpp
tests/src/: CMakeLists.txt
tests/src/qserializer/test_types/: Book.h
tests/src/qserializer/tests/: basics.cpp  utils.check.cpp  utils.cpp  utils.h
tests/src/qserializer/tests/types/: Base.cpp  Base.h  Book.cpp  Book.h  Page.cpp  Page.h
tmp/usr/local/include/qserializer/: Core.h
tmp/usr/local/include/qserializer/detail/: QSerializer.h
tmp/usr/local/lib/cmake/QSerializer/: Core.cmake  DBus.cmake  QSerializerConfig.cmake
tools/iwyu/: update-include.sh
